--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
 <body>
 	<div class="news" align="center">
 		<div class="narrator"><i>When I grow up, I wanna be <u>just like</u> my dad! I even have the <u>SAME NAME!!</u></i></div>
-	<img src="../Assets/Writings/newspaper/article1.jpeg" alt="Julia's birth!" class="article">
+	<img src="./Assets/Writings/newspaper/article1.jpeg" alt="Julia's birth!" class="article">
 		<div class="narrator"><i>There was a bad guy when I was really little, and they called my dad.</i></div>
-	<img src="../Assets/Writings/newspaper/article2.jpeg" alt="Catherine's death :(" class="article">
+	<img src="./Assets/Writings/newspaper/article2.jpeg" alt="Catherine's death :(" class="article">
 		<div class="narrator"><i>And Dad caught him, 'cause he's <u>AWESOME</u>!</i></div>
-	<img src="../Assets/Writings/newspaper/article3.jpeg" alt="Aaron's arrest!" class="article"> <br/> <br/> <br/> <br/> <br/><br/><br/><br/><br/>
-	<img src="../Assets/Writings/newspaper/article4.jpeg" alt="Dad's death." class="article">
+	<img src="./Assets/Writings/newspaper/article3.jpeg" alt="Aaron's arrest!" class="article"> <br/> <br/> <br/> <br/> <br/><br/><br/><br/><br/>
+	<img src="./Assets/Writings/newspaper/article4.jpeg" alt="Dad's death." class="article">
 		<div id="grown">Dad was...</div>
 		</div>
 	<br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/><br/><br/><br/><br/><br/><br/><br/><br/> <br/> <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 	<div id="title" align="center"> BOX: An Interactive Narrative <br/><br/>
-		<button id="startbutton" onClick="document.location = 'game intro.html'">Start</button>
-		<button id="continuebutton" onClick="document.location = 'main game.html'">Continue</button>
+		<button id="startbutton" onClick="window.location.replace('Pages/game intro.html')">Start</button>
+		<button id="continuebutton" onClick="window.location.replace('Pages/main game.html')">Continue</button>
 	</div>
 	 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
