--- a/Pages/aaron page.html
+++ b/Pages/aaron page.html
@@ -52,34 +52,34 @@
 <body>
 	<div class="aaron" align="center">
 		<div class="date"><b>September 4</b></div>
-		<img src="./Assets/Writings/lisa-real.jpeg" alt="lisainterview" class="aaronitem">
-		<img src="./Assets/Writings/aaron1.1-real.jpeg" alt="aaroninterview1" class="aaronitem">
-		<img src="./Assets/Writings/aaron1.2-real.jpeg" alt="aaroninterview2" class="aaronitem">
+		<img src="../Assets/Writings/lisa-real.jpeg" alt="lisainterview" class="aaronitem">
+		<img src="../Assets/Writings/aaron1.1-real.jpeg" alt="aaroninterview1" class="aaronitem">
+		<img src="../Assets/Writings/aaron1.2-real.jpeg" alt="aaroninterview2" class="aaronitem">
 		 <br/>
-		<button class="backbutton" onClick="window.location.replace('main intro.html')">Back to Box</button>
+		<button class="backbutton" onClick="document.location = 'main game.html'">Back to Box</button>
 		
 		<div class="date"><b>September 9</b></div>
-		<img src="./Assets/Writings/lisa-real.jpeg" alt="lisainterview" class="aaronitem">
-		<img src="./Assets/Writings/aaron2.1-real.jpeg" alt="aaroninterview1" class="aaronitem">
-		<img src="./Assets/Writings/aaron2.2-real.jpeg" alt="aaroninterview2" class="aaronitem">
-		<img src="./Assets/Writings/aaron2.3-real.jpeg" alt="aaroninterview2" class="aaronitem">
+		<img src="../Assets/Writings/lisa-real.jpeg" alt="lisainterview" class="aaronitem">
+		<img src="../Assets/Writings/aaron2.1-real.jpeg" alt="aaroninterview1" class="aaronitem">
+		<img src="../Assets/Writings/aaron2.2-real.jpeg" alt="aaroninterview2" class="aaronitem">
+		<img src="../Assets/Writings/aaron2.3-real.jpeg" alt="aaroninterview2" class="aaronitem">
 		 <br/>
-		<button class="backbutton" onClick="window.location.replace('main intro.html')">Back to Box</button>
+		<button class="backbutton" onClick="document.location = 'main game.html'">Back to Box</button>
 	</div>
 	
 	<div class="aarondet" align="center">
-		<div class="date"><b>September 3</b></div>
-		<img src="./Assets/Writings/lisa-det.jpeg" alt="lisainterview" class="aaronitem">
-		<img src="./Assets/Writings/aaron1.1-det.jpeg" alt="aaroninterview1" class="aaronitem">
-		<img src="./Assets/Writings/aaron1.2-det.jpeg" alt="aaroninterview2" class="aaronitem"> <br/>
-	<button class="backbutton" onClick="window.location.replace('main intro.html')">Back to Box</button>
+		<div class="date"><b>September 4</b></div>
+		<img src="../Assets/Writings/lisa-det.jpeg" alt="lisainterview" class="aaronitem">
+		<img src="../Assets/Writings/aaron1.1-det.jpeg" alt="aaroninterview1" class="aaronitem">
+		<img src="../Assets/Writings/aaron1.2-det.jpeg" alt="aaroninterview2" class="aaronitem"> <br/>
+	<button class="backbutton" onClick="document.location = 'main game.html'">Back to Box</button>
 		
 		<div class="date"><b>September 9</b></div>
-		<img src="./Assets/Writings/aaron2.1-det.jpeg" alt="aaroninterview1" class="aaronitem">
-		<img src="./Assets/Writings/aaron2.2-det.jpeg" alt="aaroninterview2" class="aaronitem">
-		<img src="./Assets/Writings/aaron2.3-det.jpeg" alt="aaroninterview2" class="aaronitem">
+		<img src="../Assets/Writings/aaron2.1-det.jpeg" alt="aaroninterview1" class="aaronitem">
+		<img src="../Assets/Writings/aaron2.2-det.jpeg" alt="aaroninterview2" class="aaronitem">
+		<img src="../Assets/Writings/aaron2.3-det.jpeg" alt="aaroninterview2" class="aaronitem">
 		 <br/>
-		<button class="backbutton" onClick="window.location.replace('main intro.html')">Back to Box</button>
+		<button class="backbutton" onClick="document.location = 'main game.html'">Back to Box</button>
 	</div>
 	
 	<div class="monocle">
