--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 <body>
 	<div class="news" align="center">
 		<div class="narrator"><i>When I grow up, I wanna be <u>just like</u> my dad! I even have the <u>SAME NAME!!</u></i></div>
-	<img src="./Assets/Writings/newspaper/article1.jpeg" alt="Julia's birth!" class="article">
+	<img src="../Assets/Writings/newspaper/article1.jpeg" alt="Julia's birth!" class="article">
 		<div class="narrator"><i>There was a bad guy when I was really little, and they called my dad.</i></div>
-	<img src="./Assets/Writings/newspaper/article2.jpeg" alt="Catherine's death :(" class="article">
+	<img src="../Assets/Writings/newspaper/article2.jpeg" alt="Catherine's death :(" class="article">
 		<div class="narrator"><i>And Dad caught him, 'cause he's <u>AWESOME</u>!</i></div>
-	<img src="./Assets/Writings/newspaper/article3.jpeg" alt="Aaron's arrest!" class="article"> <br/> <br/> <br/> <br/> <br/><br/><br/><br/><br/>
-	<img src="./Assets/Writings/newspaper/article4.jpeg" alt="Dad's death." class="article">
+	<img src="../Assets/Writings/newspaper/article3.jpeg" alt="Aaron's arrest!" class="article"> <br/> <br/> <br/> <br/> <br/><br/><br/><br/><br/>
+	<img src="../Assets/Writings/newspaper/article4.jpeg" alt="Dad's death." class="article">
 		<div id="grown">Dad was...</div>
 		</div>
 	<br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/><br/><br/><br/><br/><br/><br/><br/><br/> <br/> <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
