--- a/Pages/exittutorial.html
+++ b/Pages/exittutorial.html
@@ -84,7 +84,7 @@
 	<div id="exchange2">
 		
 		<p class="Max"><br/>Really? Man, you <i>are</i> the second coming of Jules Jordan. <br/> All right, I got you. Hurry back.</p>
-		<button class="Julia" onClick="document.location='finalproject/index.html'">Might be a while...</button>
+		<button class="Julia" onClick="document.location = 'index copy.html'">Might be a while...</button>
 		</div> <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 	<button class="Julia" onClick="document.location = 'main game.html'">Thanks, Max. Back to it...</button>
 	
