--- a/Pages/innocent-jules-end.html
+++ b/Pages/innocent-jules-end.html
@@ -37,7 +37,7 @@
 		</div>
 	<br/> <br/> <br/> <br/> <br/> <br/>
 	<div id="title" align="center"> BOX: An Interactive Narrative <br/><br/>
-		<button id="startbutton" onClick="document.location = 'finalproject/index.html'">Play Again</button>
+		<button id="startbutton" onClick= "document.location = 'index copy.html'">Play Again</button>
 	</div>
 	 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
