--- a/Pages/carl page.html
+++ b/Pages/carl page.html
@@ -61,7 +61,7 @@
 		<div class="date"><b>September 6</b></div>
 		<img src="../Assets/Writings/carl2.1-real.jpeg" alt="carlinterview1" class="carlitem">
 		<img src="../Assets/Writings/carl2.2-real.jpeg" alt="carlinterview2" class="carlitem">
-		<img src="../Assets/Writings/carl2.3-real.jpeg" alt="carlinterview3" class="carlitem">
+		<img src="../Assets/Writings/carl2.3-real.jpeg" alt="carlinterview3" class="carlitem"> <br/>
 		<button class="backbutton" onClick="document.location = 'main game.html'">Back to Box</button>
 	</div>
 	
